--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,7 @@ languageCode = "en-us"
 enableEmoji = true
 description = "Grant's personal website/blog"
 copyright = "&copy; Grant Gangi"
+disqusShortname = "tuxinator"
 
 [taxonomies]
   category = "categories"
